fix text overflow in comments

--- a/forum/static/forum/post.css
+++ b/forum/static/forum/post.css
@@ -83,6 +83,12 @@ hr {
   text-align: start;
 }
 
+.comment-content {
+  white-space: pre-line;
+  overflow: auto;
+  max-width: 368.55px;
+}
+
 .comment-error {
   font-size: 14px;
   max-width: 400px;
